--- a/utm.html
+++ b/utm.html
@@ -239,9 +239,9 @@
                                             <option value="pinterest">Pinterest Ad</option>
                                             <option value="pinpost">Pinterest Post</option>
                                             <option value="podcast">Podcast</option>
-                                            <option value="qrcode">QR Code</option>
                                             <option value="ravelry">Ravelry Ad</option>
                                             <option value="ravpost">Ravelry Post</option>
+                                            <option value="show">Show</option>
                                             <option value="tiktok">TikTok</option>
                                             <option value="twitter">Twitter</option>
                                             <option value="youtube">Youtube</option>
