--- a/abtest.html
+++ b/abtest.html
@@ -49,15 +49,15 @@
                     <span>Promotion Builder</span></a>
             </li>
 
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="utm.html">
                     <i class="fas fa-fw fa-code"></i>
                     <span>UTM Builder</span></a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="abtest.html">
-                    <i class="fas fa-fw fa-microscope"></i>
+                    <i class="fas fa-microscope"></i>
                     <span>A/B Test</span></a>
             </li>
 
@@ -184,7 +184,7 @@
                            
                             <div class="card shadow mb-4">
                                 <div class="card-header">
-                                    <h6 class="m-0 font-weight-bold text-primary">UTM Builder</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">AB Test</h6>
                                 </div>
                                 <div class="card-body">
                                     <!-- QUESTION 1: URL -->
