--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class="fas fa-fw fa-dollar-sign"></i>
                     <span>Promotion Builder</span></a>
             </li>
 
@@ -54,6 +54,12 @@
                 <a class="nav-link" href="utm.html">
                     <i class="fas fa-fw fa-code"></i>
                     <span>UTM Builder</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="abtest.html">
+                    <i class="fas fa-fw fa-microscope"></i>
+                    <span>A/B Test</span></a>
             </li>
 
             <!-- Divider -->
@@ -115,7 +121,7 @@
 
             <!-- Sidebar Message -->
             <div class="sidebar-card d-none d-lg-flex">
-                <p class="text-center mb-2">Are you looking for a promo that doesn't exist yet?</p>
+                <p class="text-center mb-2">Need help?</p>
                 <a class="btn btn-success btn-sm" href="mailto:michael_lindsay@crafsamericana.com">Email Me!</a>
             </div>
 
