--- a/abtest.html
+++ b/abtest.html
@@ -44,7 +44,7 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-dollar-sign"></i>
+                    <i class="fas fa-solid fa-cart-shopping"></i>
                     <span>Promotion Builder</span></a>
             </li>
 
@@ -54,7 +54,7 @@
                     <span>UTM Builder</span></a>
             </li>
 
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="abtest.html">
                     <i class="fas fa-microscope"></i>
                     <span>A/B Test</span></a>
