--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
-                    <i class="fa-solid fa-cart-shopping"></i>
+                    <i class=" fas fa-solid fa-cart-shopping"></i>
                     <span>Promotion Builder</span></a>
             </li>
 
