--- a/promo-help.html
+++ b/promo-help.html
@@ -45,7 +45,7 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                  <i class=" fas fa-solid fa-cart-shopping"></i>
                     <span>Promotion Builder</span></a>
             </li>
 
@@ -53,6 +53,12 @@
                 <a class="nav-link" href="utm.html">
                     <i class="fas fa-fw fa-code"></i>
                     <span>UTM Builder</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="abtest.html">
+                  <i class="fas fa-microscope"></i>
+                  <span>A/B Test</span></a>
             </li>
 
             <!-- Divider -->
@@ -113,7 +119,7 @@
 
             <!-- Sidebar Message -->
             <div class="sidebar-card d-none d-lg-flex">
-                <p class="text-center mb-2">Are you looking for a promo that doesn't exist yet?</p>
+                <p class="text-center mb-2">Need help?</p>
                 <a class="btn btn-success btn-sm" href="mailto:michael_lindsay@craftsamericana.com">Email Me!</a>
             </div>
 
@@ -194,8 +200,6 @@
                                           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                                             <div class="card-body">
                                               Fill out the promotion builder, and <b>only submit one basecamp task</b> per brand at a time. 
-                                              <br> <br>
-                                              No need to make a separate task for Response and CagDev entry.
                                               <br> <br>
                                               <b>General Courtesies:</b>
                                               <br> <br>
