--- a/utm.html
+++ b/utm.html
@@ -45,7 +45,7 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-dollar-sign"></i>
+                    <i class="fas fa-solid fa-cart-shopping"></i>
                     <span>Promotion Builder</span></a>
             </li>
 
