--- a/abtest.html
+++ b/abtest.html
@@ -54,7 +54,7 @@
                     <span>UTM Builder</span></a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="abtest.html">
                     <i class="fas fa-microscope"></i>
                     <span>A/B Test</span></a>
