default options change

--- a/abtest.html
+++ b/abtest.html
@@ -236,7 +236,7 @@
                                             </div>
                                             <select class= "form-control" id="hypothesis">
                                                 <option value="one">One Sided</option>
-                                                <option value="two">Two Sided</option>
+                                                <option value="two" selected>Two Sided</option>
                                               </select>
                                         </div>
 
@@ -246,7 +246,7 @@
                                             </div>
                                             <select class= "form-control" id="confidence">
                                                 <option value="0.90">90%</option>
-                                                <option value="0.95">95%</option>
+                                                <option value="0.95" selected>95%</option>
                                                 <option value="0.99">99%</option>
                                               </select>
                                         </div>
