--- a/abtest.html
+++ b/abtest.html
@@ -43,7 +43,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="promotions.html">
                     <i class="fas fa-solid fa-cart-shopping"></i>
                     <span>Promotion Builder</span></a>
             </li>
