--- a/promo-help.html
+++ b/promo-help.html
@@ -32,7 +32,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="promotions.html">
                 <div class="sidebar-brand-icon">
                     <img class="fas" width = "100" src="img/pna_white.png" alt="...">
                 </div>
@@ -44,7 +44,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="promotions.html">
                   <i class=" fas fa-solid fa-cart-shopping"></i>
                     <span>Promotion Builder</span></a>
             </li>
