--- a/tables.html
+++ b/tables.html
@@ -38,7 +38,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="promotions.html">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <img class="fas" width = "100" src="img/pna_white.png" alt="...">
                 </div>
@@ -50,7 +50,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="promotions.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Promotion Builder</span></a>
             </li>
