--- a/utm-help.html
+++ b/utm-help.html
@@ -44,7 +44,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="promotions.html">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <span>Promotion Builder</span></a>
             </li>
