--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                         <h3 class="mb-4" style="text-align: center; display: flex; align-items: center; justify-content: center;">Select a tool below:</h3>
                                         <a href="promotions.html" class="btn btn-primary w-100 mb-4" role="button" style="height: 60px; text-align: center; display: flex; align-items: center; justify-content: center;">Promotion Builder</a>
                                         <a href="utm.html" class="btn btn-primary w-100 mb-4" role="button" style="height: 60px; text-align: center; display: flex; align-items: center; justify-content: center;">UTM Builder</a>
-                                        <a href="abtest.html" class="btn btn-primary w-100 mb-4 role="button" style="height: 60px; text-align: center; display: flex; align-items: center; justify-content: center;">AB Test</a>
+                                        <a href="abtest.html" class="btn btn-primary w-100 mb-4 role="button" style="height: 60px; text-align: center; display: flex; align-items: center; justify-content: center;">A/B Test</a>
                                     </div>
                                     
                                 </div>
