--- a/utm.html
+++ b/utm.html
@@ -206,6 +206,7 @@
                                             <option value="facebook">Facebook</option>
                                             <option value="instagram">Instagram</option>
                                             <option value="jebbit">Jebbit</option>
+                                            <option value="meta">Meta</option>
                                             <option value="pinterest">Pinterest</option>
                                             <option value="libsyn">Podcast</option>
                                             <option value="ravelry">Ravelry</option>
@@ -242,6 +243,7 @@
                                             <option value="instagram">Instagram Ad</option>
                                             <option value="instapost">Instagram Post</option>
                                             <option value="jebbit">Jebbit Survey</option>
+                                            <option value="meta">Meta</option>
                                             <option value="pinterest">Pinterest Ad</option>
                                             <option value="pinpost">Pinterest Post</option>
                                             <option value="podcast">Podcast</option>
