--- a/utm.html
+++ b/utm.html
@@ -209,6 +209,7 @@
                                             <option value="meta">Meta</option>
                                             <option value="pinterest">Pinterest</option>
                                             <option value="libsyn">Podcast</option>
+                                            <option value="primepublishing">Prime Publishing</option>
                                             <option value="ravelry">Ravelry</option>
                                             <option value="show">Show</option>
                                             <option value="tiktok">TikTok</option>
@@ -244,6 +245,7 @@
                                             <option value="instapost">Instagram Post</option>
                                             <option value="jebbit">Jebbit Survey</option>
                                             <option value="meta">Meta</option>
+                                            <option value="beoutsidelist">Outside Email List</option>
                                             <option value="pinterest">Pinterest Ad</option>
                                             <option value="pinpost">Pinterest Post</option>
                                             <option value="podcast">Podcast</option>
