--- a/utm.html
+++ b/utm.html
@@ -212,6 +212,7 @@
                                             <option value="primepublishing">Prime Publishing</option>
                                             <option value="ravelry">Ravelry</option>
                                             <option value="show">Show</option>
+                                            <option value="substack">SubStack</option>
                                             <option value="tiktok">TikTok</option>
                                             <option value="twitter">Twitter</option>
                                             <option value="youtube">Youtube</option>
@@ -252,6 +253,7 @@
                                             <option value="ravelry">Ravelry Ad</option>
                                             <option value="ravpost">Ravelry Post</option>
                                             <option value="show">Show</option>
+                                            <option value="substack">Substack</option>
                                             <option value="tiktok">TikTok</option>
                                             <option value="twitter">Twitter</option>
                                             <option value="youtube">Youtube</option>
